# Aurora

./: .env.example  .gitignore  AURORA_TRADING_SYSTEM.md  Makefile  docker-compose.yml
.claude/: launch.json  settings.local.json
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  analysis.py  audit.py  auth.py  dashboard.py  emergency.py  portfolio.py  router.py  settings.py  signals.py  trades.py  ws.py
backend/app/core/: __init__.py  audit_logger.py  claude_analyst.py  data_ingestion.py  indicators.py  portfolio_tracker.py  risk_manager.py  scheduler.py  trade_executor.py
backend/app/ml/: __init__.py  feature_engineering.py  signal_engine.py  train.py
backend/app/models/: __init__.py  audit_log.py  market_data.py  portfolio.py  risk_events.py  signals.py  trades.py
backend/app/security/: __init__.py  auth.py  rate_limiter.py
backend/tests/: conftest.py  test_auth.py  test_claude_analyst.py  test_risk_manager.py  test_signal_engine.py  test_trade_executor.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx  Sidebar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useApi.js  usePortfolio.js  useWebSocket.js
frontend/src/pages/: Analysis.jsx  Audit.jsx  Dashboard.jsx  Login.jsx  Settings.jsx  Signals.jsx  Trades.jsx
tests/e2e/: package-lock.json  package.json  playwright.config.js
tests/e2e/specs/: dashboard.spec.js
