[project]
name = "aurora-backend"
version = "1.0.0"
description = "AURORA — Automated Unified Real-time Orchestrated Analytics"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.0",

    # Cache & Queue
    "redis>=5.2.0",

    # Settings & Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # HTTP Client
    "httpx>=0.28.0",

    # AI & ML
    "anthropic>=0.40.0",
    "lightgbm>=4.5.0",
    "scikit-learn>=1.6.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "ta>=0.11.0",
    "joblib>=1.4.0",
    "statsmodels>=0.14.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",

    # Finance Data
    "alpaca-py>=0.33.0",
    "yfinance>=0.2.40",

    # Utilities
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B"]
ignore = ["S101"]  # Allow assert in tests
